# onion-relay

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  database_implement.md  mado.toml
.github/workflows/: test.yml
shell/: musl_build.sh
src/: main.c
src/arch/: close.h  epoll.h  file_read.h  fstat.h  fsync.h  memory.h  mmap.h  open.h  optimize_socket.h  recv.h  send.h
src/arch/linux/: epoll.h  errno.h  fcntl_def.h  mmap_def.h  stat_def.h
src/arch/linux/x86_64/: accept.h  asm.h  close.h  epoll.h  file_read.h  fstat.h  fsync.h  listen.h  memory.h  mmap.h  open.h  optimize_socket.h  recv.h  send.h  sigaction.h  write.h
src/crypto/: base64.h  sha1.c  sha1.h
src/http/: http.c  http.h
src/json/: jsmn.h  json_wrapper.c  json_wrapper.h
src/nostr/: nostr_func.c  nostr_func.h  nostr_types.h
src/nostr/db/: db.h  db_event.c  db_init.c  db_internal.h  db_query_v2.c  db_tags.c  db_types.h
src/nostr/db/btree/: btree_compare.c  btree_types.h
src/nostr/db/index/: db_index_id.c  db_index_id.h  db_index_kind.c  db_index_kind.h  db_index_pubkey.c  db_index_pubkey.h  db_index_pubkey_kind.c  db_index_pubkey_kind.h  db_index_tag.c  db_index_tag.h  db_index_timeline.c  db_index_timeline.h  db_index_types.h  index_id.c  index_kind.c  index_manager.c  index_manager.h  index_pubkey.c  index_pubkey_kind.c  index_tag.c  index_timeline.c
src/nostr/db/query/: db_query.h  query_engine.c  query_engine.h  query_result_v2.c
src/nostr/event/: nostr_event.c  nostr_event_content.c  nostr_event_created_at.c  nostr_event_id.c  nostr_event_kind.c  nostr_event_pubkey.c  nostr_event_sig.c  nostr_event_tags.c
src/nostr/response/: nostr_response.c  nostr_response.h
src/nostr/subscription/: nostr_close.c  nostr_close.h  nostr_filter.c  nostr_filter.h  nostr_filter_authors.c  nostr_filter_ids.c  nostr_filter_kinds.c  nostr_filter_limit.c  nostr_filter_since.c  nostr_filter_tags.c  nostr_filter_types.h  nostr_filter_until.c  nostr_req.c  nostr_req.h  nostr_subscription.c  nostr_subscription.h
src/nostr/validate/: nostr_event_created_at.c  nostr_event_id.c  nostr_event_kind.c  nostr_event_pubkey.c  nostr_event_sig.c  nostr_event_tags.c
src/util/: allocator.h  log.c  log.h  string.h  types.h
src/websocket/: crypto.c  internal_log.c  parser.c  websocket.h  websocket_local.h
src/websocket/parser/: to_entity.c  to_packet.c
src/websocket/server/: handshake.c  init.c  is_valid_header.c  is_valid_request.c  is_valid_request_line.c  loop.c
src/websocket/server/accept/: accept_handle.h  epoll_accept.h
src/websocket/server/handshake/: handshake.c  is_valid_header.c  is_valid_request_line.c
src/websocket/server/loop/: loop.c
src/websocket/server/loop/accept/: accept_handle.h  epoll_accept.h
src/websocket/server/loop/receive/: epoll_receive.h  opcode_handle.h  receive_handle.h
src/websocket/server/receive/: epoll_receive.h  opcode_handle.h  receive_handle.h
src/websocket/socket/: accept.c  epoll.c  listen.c  optimize_socket.h  recv.c  send.c
tests/: CMakeLists.txt
tests/nostr/db/: db_event_test.cpp  db_index_test.cpp  db_init_test.cpp
tests/nostr/db/btree/: btree_test.cpp
tests/nostr/db/index/: index_test.cpp
tests/nostr/db/query/: query_engine_test.cpp
tests/nostr/event/: nostr_event_test.cpp
tests/nostr/response/: nostr_response_test.cpp
tests/nostr/subscription/: nostr_subscription_test.cpp
